[package]
name = "bulkhead"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_millis = "0.1.1"
serde_with = "3.14.0" # optional, or use custom serialization
serde_json = "1.0"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.17"
